@@ -637,9 +637,18 @@
 		foreach ($hostids as $id) {	/* The section should be improved */
 			$host_old = get_host_by_hostid($id);
 			$result = DBexecute('DELETE FROM hosts WHERE hostid='.$id);
-			if ($result)
+			if ($result) {
+				info(sprintf(S_HOST_HAS_BEEN_DELETED_MSG, $host_old['host']));
+				/*SDI(
+					'AUDIT_ACTION_DELETE '.AUDIT_ACTION_DELETE.' / '.
+					'AUDIT_RESOURCE_HOST '.AUDIT_RESOURCE_HOST.' / '.
+					'$id '.$id.' / '.
+					'$host_old[\'host\'] '.$host_old['host'].' / '.
+					'hosts / '.
+					'NULL / NULL'
+					);*/
 				add_audit_ext(AUDIT_ACTION_DELETE, AUDIT_RESOURCE_HOST, $id, $host_old['host'], 'hosts', NULL, NULL);
-			else
+			}else
 				break;
 		}
 
