@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBX-1503] added information message after host delete action, about host being deleted (Maxim Andruhovich / AM)
  - [ZBX-2418] fixed bug with JavaScript URL parser, anchor were recognized as part of file (Maxim Andruhovich / AM)
  - [ZBXNEXT-323] improved bad performance of the trends for large number of items (Sasha)
  - [ZBXNEXT-327] more intuitive load balancing of pollers with a single item queue (asaveljevs)
